--- a/Sparc2/Sparc2/Ideas/PouchSyncIdeas.razor
+++ b/Sparc2/Sparc2/Ideas/PouchSyncIdeas.razor
@@ -32,6 +32,6 @@
 
    private async void SyncIdeas(MouseEventArgs args)  
    {  
-       await _ideasRepo.SyncAsync();  
+       //await _ideasRepo.SyncAsync();  
    }  
 }
