Added Language selection and change to SparcV2

--- a/Sparc2/Sparc2/Shared/Components/Auth.razor
+++ b/Sparc2/Sparc2/Shared/Components/Auth.razor
@@ -78,13 +78,12 @@
             }
 
             <hr />
-            @*             <footer>
-                <LanguageSelector />
-            </footer> *@
+            <footer>
+                <LanguageSelector CurrentUser="CurrentUser" />
+            </footer>
         </section>
     }
 </div>
-
 
 @code {
     BlossomUser? CurrentUser;
