Improve passkey auth flow with email modal and Kori product assignment

--- a/Sparc2/Sparc2/Shared/Components/Auth.razor
+++ b/Sparc2/Sparc2/Shared/Components/Auth.razor
@@ -78,9 +78,9 @@
             }
 
             <hr />
-            <footer>
+           @*  <footer>
                 <LanguageSelector CurrentUser="CurrentUser" />
-            </footer>
+            </footer> *@
         </section>
     }
 </div>
