--- a/Sparc2/Sparc2/Pages/KoriReferral.razor.css
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor.css
@@ -241,6 +241,51 @@ section .terms a:hover {
   color: var(--gray-600);
 }
 
+.modal {
+  width: 332px;
+  padding: 24px;
+  border-radius: 16px;
+  background: var(--yellow-50);
+  animation: fadeIn 1s ease-in-out;
+}
+.modal header {
+  margin-bottom: 16px;
+}
+.modal header h3 {
+  color: var(--gray-900);
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.16px;
+}
+.modal div {
+  width: 100%;
+}
+.modal div ::deep input {
+  border-radius: 16px;
+  border: 1px solid var(--gray-100);
+  background: var(--yellow-50);
+  padding: 8px 16px;
+  height: 22px;
+  width: -webkit-fill-available;
+}
+.modal footer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 16px;
+}
+
+@media (min-width: 1024px) and (max-width: 1096px) {
+  section .landing .landing-text {
+    position: relative;
+    width: 39%;
+  }
+  section .landing .landing-text h2 {
+    position: relative;
+    width: 49vw;
+    max-width: none;
+  }
+}
 @media (min-width: 767px) and (max-width: 1024px) {
   section {
     padding: 80px 32px 0;
@@ -278,17 +323,6 @@ section .terms a:hover {
   }
   section .terms {
     margin-bottom: 47px;
-  }
-}
-@media (min-width: 1024px) and (max-width: 1096px) {
-  section .landing .landing-text {
-    position: relative;
-    width: 39%;
-  }
-  section .landing .landing-text h2 {
-    position: relative;
-    width: 49vw;
-    max-width: none;
   }
 }
 @media (min-width: 430px) and (max-width: 766px) {
@@ -487,5 +521,8 @@ section .terms a:hover {
     margin-bottom: 25px;
     font-size: 16px;
     flex-wrap: wrap;
+  }
+  .modal {
+    width: 315px;
   }
 }
