--- a/Sparc2/Sparc2/Pages/KoriReferral.razor.scss
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor.scss
@@ -288,6 +288,57 @@
     }
 }
 
+.modal {
+    width: 332px;
+    padding: 24px;
+    border-radius: 16px;
+    background: var(--yellow-50);
+    animation: fadeIn 1s ease-in-out;
+
+    header {
+        margin-bottom: 16px;
+
+        h3 {
+            color: var(--gray-900);
+            font-size: 1.6rem;
+            font-weight: 600;
+            line-height: 120%;
+            letter-spacing: -0.16px;
+        }
+    }
+
+    div {
+        width: 100%;
+
+        ::deep input {
+            border-radius: 16px;
+            border: 1px solid var(--gray-100);
+            background: var(--yellow-50);
+            padding: 8px 16px;
+            height: 22px;
+            width: -webkit-fill-available;
+        }
+    }
+
+    footer {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 16px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1096px) {
+    section .landing .landing-text {
+        position: relative;
+        width: 39%;
+
+        h2 {
+            position: relative;
+            width: 49vw;
+            max-width: none;
+        }
+    }
+}
 @media (min-width: 767px) and (max-width: 1024px) {
     section {
         padding: 80px 32px 0;
@@ -336,20 +387,6 @@
         }
     }
 }
-
-@media (min-width: 1024px) and (max-width: 1096px) {
-    section .landing .landing-text {
-        position: relative;
-        width: 39%;
-
-        h2 {
-            position: relative;
-            width: 49vw;
-            max-width: none;
-        }
-    }
-}
-
 
 @media (min-width: 430px) and (max-width: 766px) {
     section {
@@ -603,5 +640,9 @@
             font-size: 16px;
             flex-wrap: wrap;
         }
+    }
+
+    .modal {
+        width: 315px;
     }
 }
