Show username in NavMenu and implement feature to edit username

--- a/Sparc2/Sparc2/Pages/KoriReferral.razor
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor
@@ -260,7 +260,7 @@
             }
 
             // 3. Modal: request
-            if (string.IsNullOrWhiteSpace(CurrentUser.UserEmail))
+            if (string.IsNullOrWhiteSpace(CurrentUser.Email))
             {
                 ShowEmailModal = true;
                 StateHasChanged();
@@ -284,7 +284,7 @@
         try
         {
             // 4. Modal: save email
-            var patchResp = await BlossomCloud.AddUserEmail(new AddUserEmailRequest(Email));
+            var patchResp = await BlossomCloud.UpdateUser(new UpdateUserRequest(Email));
 
             if (patchResp is null)
             {
