--- a/Sparc2/Sparc2/Pages/KoriReferral.razor
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor
@@ -284,7 +284,7 @@
         try
         {
             // 4. Modal: save email
-            var patchResp = await BlossomCloud.UpdateUser(new UpdateUserRequest(Email));
+            var patchResp = await BlossomCloud.UpdateUser(new UpdateUserRequest(Email: Email));
 
             if (patchResp is null)
             {
