--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -5,7 +5,7 @@
   left: 0;
   z-index: 100;
   margin: 32px 100px;
-  background: linear-gradient(to bottom, white 0%, white 70%, transparent 70%, transparent 100%);
+  background: linear-gradient(to bottom, white 0%, white 45%, transparent 45%, transparent 100%);
 }
 nav .container {
   display: flex;
@@ -21,7 +21,7 @@ nav .right div {
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 8px 16px 8px 14px;
+  padding: 8px 16px 8px 4px;
 }
 nav .right div ::deep svg path {
   stroke: var(--purple-800);
@@ -38,6 +38,9 @@ nav .right div span {
   color: var(--purple-800);
   cursor: pointer;
   letter-spacing: 0.5px;
+}
+nav .right div span:hover {
+  text-decoration: underline;
 }
 nav button {
   padding: 8px 16px 8px 14px;
