--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -5,7 +5,7 @@
     left: 0;
     z-index: 100;
     margin: 32px 100px;
-    background: linear-gradient(to bottom, white 0%, white 70%, transparent 70%, transparent 100%);
+    background: linear-gradient(to bottom, white 0%, white 45%, transparent 45%, transparent 100%);
 
     .container {
         display: flex;
@@ -22,7 +22,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            padding: 8px 16px 8px 14px;
+            padding: 8px 16px 8px 4px;
 
             ::deep svg path {
                 stroke: var(--purple-800);
@@ -41,6 +41,10 @@
                 color: var(--purple-800);
                 cursor: pointer;
                 letter-spacing: 0.5px;
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
         }
     }
