--- a/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.css
@@ -88,6 +88,24 @@
   height: 22px;
   width: -webkit-fill-available;
 }
+.modal div label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5px;
+  margin-top: 10px;
+}
+.modal div label ::deep input[type=checkbox] {
+  width: auto;
+  padding: 0;
+  margin: 0;
+  height: 14px;
+}
+.modal div label span {
+  font-size: 1.2rem;
+  letter-spacing: 0.16px;
+}
 .modal footer {
   display: flex;
   justify-content: space-between;
