--- a/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/ProfileCircle.razor.scss
@@ -99,6 +99,27 @@
             height: 22px;
             width: -webkit-fill-available;
         }
+
+        label {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 5px;
+            margin-top: 10px;
+
+            ::deep input[type=checkbox] {
+                width: auto;
+                padding: 0;
+                margin: 0;
+                height: 14px;
+            }
+
+            span {
+                font-size: 1.2rem;
+                letter-spacing: 0.16px;
+            }
+        }
     }
 
     footer {
