--- a/Sparc2/Sparc2/Index.razor.scss
+++ b/Sparc2/Sparc2/Index.razor.scss
@@ -99,6 +99,12 @@
         }
     }
 
+    @media only screen and (min-width: 1680px) {
+        .hero {
+            margin-top: 85px;
+        }
+    }
+
     @media only screen and (max-width: 1536px) {
         .hero {
             #hero-text {
