--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -5,7 +5,7 @@
     left: 0;
     z-index: 100;
     margin: 32px 100px;
-    background: linear-gradient(to bottom, white 0%, white 45%, transparent 45%, transparent 100%);
+    background: linear-gradient(to bottom, white 0%, white 84%, transparent 84%, transparent 100%);
 
     .container {
         display: flex;
@@ -190,7 +190,8 @@
 
 .home-nav {
     margin: 0;
-    padding: 32px 100px;
+    /*padding: 32px 100px;*/
+    padding: 16px 100px;
 }
 
 @media only screen and (max-width: 1024px), (orientation: portrait) {
