Added payment feature for "Buy Product" and "Donate" with multicurrency and multiprices

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" href="https://use.typekit.net/mur1cay.css">
+    <script src="https://js.stripe.com/v3"></script>
+    <script src="@Assets["js/stripeIntegration.js"]"></script>
     <ImportMap />
     
     <HeadOutlet @rendermode="InteractiveServer" />
