--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -9,6 +9,7 @@
                 <input type="text" placeholder="Search" class="input-text" />
             </div>
             <div class="right">
+                <button class="tertiary-btn" @onclick="() => OpenAddCard(2)"><LightbulbIcon /> <span>Buy Product</span></button>
                 <button class="tertiary-btn" @onclick="() => OpenAddCard(0)"><LightbulbIcon /> <span>Share Idea</span></button>
                 <button class="tertiary-btn donate-btn" @onclick="() => OpenAddCard(1)"><DollarIcon />  <span>Donate</span></button>
             </div>
