--- a/Sparc2/Sparc2/Shared/Components/Auth.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/Auth.razor.scss
@@ -1,7 +1,7 @@
 ﻿.blossom-authenticator {
     position: relative;
-    /*display: inline-block;*/
-    display: none;
+    display: inline-block;
+    /*display: none;*/
 
     .auth-toggle {
         background: transparent;
