--- a/Sparc2/Sparc2/Shared/Components/LanguageSelector.razor
+++ b/Sparc2/Sparc2/Shared/Components/LanguageSelector.razor
@@ -51,8 +51,8 @@
     protected override async Task OnInitializedAsync()
     {
         Languages = await Cloud.GetLanguages();
-        SelectedLanguage = CurrentUser.PrimaryLanguage
-            ?? Languages.FirstOrDefault(x => x.Id == CultureInfo.CurrentUICulture.TwoLetterISOLanguageName);
+        // SelectedLanguage = CurrentUser.PrimaryLanguage
+        //     ?? Languages.FirstOrDefault(x => x.Id == CultureInfo.CurrentUICulture.TwoLetterISOLanguageName);
     }
     void ToggleLanguageList()
     {
